--- a/ui/package.json
+++ b/ui/package.json
@@ -17,43 +17,43 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.16",
-    "@angular/cdk": "^11.2.4",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~12.2.16",
     "@angular/compiler": "~12.2.16",
     "@angular/core": "~12.2.16",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~12.2.16",
-    "@angular/material": "^11.2.4",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~12.2.16",
     "@angular/platform-browser-dynamic": "~12.2.16",
     "@angular/router": "~12.2.16",
     "@ng-toolkit/serverless": "^8.1.0",
-    "@types/lodash": "^4.14.168",
+    "@types/lodash": "^4.14.181",
     "angular-responsive-carousel": "^2.1.2",
     "lodash": "^4.17.21",
     "material": "^0.4.3",
-    "ng-particles": "^2.2.4",
+    "ng-particles": "^2.42.4",
     "ngx-toastr": "^13.2.1",
-    "rxjs": "~6.6.0",
-    "rxjs-compat": "^6.6.6",
-    "tslib": "^2.0.0",
-    "tsparticles": "^1.19.4",
-    "zone.js": "~0.11.4"
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
+    "tslib": "^2.3.1",
+    "tsparticles": "^1.42.4",
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.17",
     "@angular/cli": "~12.2.17",
     "@angular/compiler-cli": "~12.2.16",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@types/jasmine": "^3.6.11",
+    "@types/node": "^12.20.47",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "^6.3.17",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "^4.0.2",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
