--- a/ui/package.json
+++ b/ui/package.json
@@ -36,6 +36,7 @@
     "ngx-toastr": "^13.2.1",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
+    "selfsigned": "^2.0.1",
     "tslib": "^2.3.1",
     "tsparticles": "^1.42.4",
     "zone.js": "^0.11.5"
