--- a/ui/package.json
+++ b/ui/package.json
@@ -16,36 +16,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.16",
-    "@angular/cdk": "^11.2.13",
-    "@angular/common": "~12.2.16",
-    "@angular/compiler": "~12.2.16",
-    "@angular/core": "~12.2.16",
+    "@angular/animations": "~13.3.1",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "~13.3.1",
+    "@angular/compiler": "~13.3.1",
+    "@angular/core": "~13.3.1",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~12.2.16",
-    "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "~12.2.16",
-    "@angular/platform-browser-dynamic": "~12.2.16",
-    "@angular/router": "~12.2.16",
-    "@ng-toolkit/serverless": "^8.1.0",
+    "@angular/forms": "~13.3.1",
+    "@angular/material": "^12.2.13",
+    "@angular/platform-browser": "~13.3.1",
+    "@angular/platform-browser-dynamic": "~13.3.1",
+    "@angular/router": "~13.3.1",
     "@types/lodash": "^4.14.181",
     "angular-responsive-carousel": "^2.1.2",
     "lodash": "^4.17.21",
     "material": "^0.4.3",
     "ng-particles": "^2.42.4",
     "ngx-toastr": "^13.2.1",
-    "rxjs": "^6.6.7",
+    "node-forge": ">=1.3.0",
+    "rxjs": "~7.4.0",
     "rxjs-compat": "^6.6.7",
     "selfsigned": "^2.0.1",
     "tslib": "^2.3.1",
     "tsparticles": "^1.42.4",
-    "zone.js": "^0.11.5",
-    "node-forge": ">=1.3.0"
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.1",
-    "@angular/cli": "~12.2.17",
-    "@angular/compiler-cli": "~12.2.16",
+    "@angular/cli": "^13.3.1",
+    "@angular/compiler-cli": "~13.3.1",
     "@types/jasmine": "^3.10.5",
     "@types/node": "^12.20.47",
     "codelyzer": "^6.0.2",
@@ -60,7 +59,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.3"
   },
   "proxy": "localhost:8080",
   "/api/*": {
